# bazel-gen-header-bug

./: .bazelrc  .bazelversion  MODULE.bazel  README.md  WORKSPACE
a/: BUILD.bazel  header1.h
b/: BUILD.bazel  file1.cxx  file1.hxx
